2002-02-28  Bart Schaefer  <schaefer@zsh.org>

	* 16748: Completion/Zsh/Command/_zle: Fix infinite loop
	introduced by 16464.

2002-02-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 16711: Src/loop.c: allow nterruption of empty while-loops
	with ^C

	* 16710: Completion/Base/Core/_message, Test/Y03arguments.ztst:
	make _message inhibit insertion of matches unless there are
	faked ones

	* 16708: Completion/Base/Core/_message,
	Completion/Base/Utility/_guard, Completion/Unix/Command/_grep,
	Completion/Unix/Command/_pbm, Completion/Unix/Command/_pine,
	Completion/X/Command/_vnc, Doc/Zsh/compsys.yo,
	Src/Zle/compcore.c: make _guard use `_mesage -e'; make
	`_message -e' use $curtag as a default; change uses of _guard

2002-02-22  Wayne Davison  <wayned@users.sourceforge.net>

	* 16703: Src/hist.c: In putoldhistentryontop(), ensure that we can't
	return with "next" set to the value we just put on top.

	* 16703: Src/builtin.c: Improved the output of the "history" command
	with a 1-line history buffer, and also improved the error handling of
	explicitly-specified first/last values.

2002-02-22  Oliver Kiddle  <opk@zsh.org>

	* 16620, 16697: Src/subst.c, Src/glob.c, Doc/Zsh/expn.yo:
	add a and n parameter expansion flags for numeric sorting and
	reverse index ordering of arrays

2002-02-21  Clint Adams  <clint@zsh.org>

	* 16689: Etc/.distfiles, Etc/TODO: list some things to do.

	* 16688: Doc/Zsh/params.yo: clarify the pseudo-randomness of
	RANDOM.

2002-02-20  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Completion/Unix/Command/_pine: Fix sed expression to
	correctly extract option names from ~/.pinerc file.

2002-02-20  Wayne Davison  <wayned@users.sourceforge.net>

	* 16678: Src/hist.c: Yet another fix for prepnexthistent().

2002-02-20  Oliver Kiddle  <opk@zsh.org>

	* 16619, 16676: Src/builtin.c, Doc/Zsh/builtins.yo,
	Completion/Zsh/Command/_dirs, Completion/Unix/Type/_directories:
	add -c, -l and -p options to the dirs builtin for bash compatibility
